deployments/nifi-clusters/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: registry-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nifi-registry
            port:
              number: 18080
        path: /nifi-registry
        pathType: Prefix
